# crypto-voyager

./: README.md  cabal.project  cabal.project.freeze
db/migrations/: 20211203145301_init.up.sql
tailwind/: tailwind.cabal
tailwind/app/: Main.hs
tailwind/data/: custom.json
tailwind/src/Data/: Parser.hs
tailwind/src/Network/Wreq/: Optics.hs
tailwind/src/Tailwind/: Types.hs
tailwind/src/Tailwind/DB/: Queries.hs
tailwind/src/Tailwind/DataSource/: CoinGecko.hs
tailwind/src/Tailwind/Parser/: CoinGecko.hs
tailwind/test/: Main.hs
